// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`classconstant final 1`] = `
Program {
  "children": [
    Class {
      "attrGroups": [],
      "body": [
        ClassConstant {
          "attrGroups": [],
          "constants": [
            Constant {
              "kind": "constant",
              "name": Identifier {
                "kind": "identifier",
                "name": "CONSTANT",
              },
              "value": String {
                "isDoubleQuote": true,
                "kind": "string",
                "raw": ""Hello world!"",
                "unicode": false,
                "value": "Hello world!",
              },
            },
          ],
          "final": true,
          "kind": "classconstant",
          "nullable": false,
          "type": null,
          "visibility": "public",
        },
      ],
      "extends": null,
      "implements": null,
      "isAbstract": false,
      "isAnonymous": false,
      "isFinal": false,
      "isReadonly": false,
      "kind": "class",
      "name": Identifier {
        "kind": "identifier",
        "name": "Foo",
      },
    },
  ],
  "errors": [],
  "kind": "program",
}
`;

exports[`classconstant multiple 1`] = `
Program {
  "children": [
    Class {
      "attrGroups": [],
      "body": [
        ClassConstant {
          "attrGroups": [],
          "constants": [
            Constant {
              "kind": "constant",
              "name": Identifier {
                "kind": "identifier",
                "name": "CONSTANT",
              },
              "value": String {
                "isDoubleQuote": true,
                "kind": "string",
                "raw": ""Hello world!"",
                "unicode": false,
                "value": "Hello world!",
              },
            },
            Constant {
              "kind": "constant",
              "name": Identifier {
                "kind": "identifier",
                "name": "OTHER_CONSTANT",
              },
              "value": String {
                "isDoubleQuote": true,
                "kind": "string",
                "raw": ""Other hello world!"",
                "unicode": false,
                "value": "Other hello world!",
              },
            },
          ],
          "final": false,
          "kind": "classconstant",
          "nullable": false,
          "type": null,
          "visibility": "",
        },
      ],
      "extends": null,
      "implements": null,
      "isAbstract": false,
      "isAnonymous": false,
      "isFinal": false,
      "isReadonly": false,
      "kind": "class",
      "name": Identifier {
        "kind": "identifier",
        "name": "Foo",
      },
    },
  ],
  "errors": [],
  "kind": "program",
}
`;

exports[`classconstant multiple 8.3 1`] = `
Program {
  "children": [
    Class {
      "attrGroups": [],
      "body": [
        ClassConstant {
          "attrGroups": [],
          "constants": [
            Constant {
              "kind": "constant",
              "name": Identifier {
                "kind": "identifier",
                "name": "NAME_1",
              },
              "value": String {
                "isDoubleQuote": true,
                "kind": "string",
                "raw": ""Hello world!"",
                "unicode": false,
                "value": "Hello world!",
              },
            },
            Constant {
              "kind": "constant",
              "name": Identifier {
                "kind": "identifier",
                "name": "NAME_2",
              },
              "value": String {
                "isDoubleQuote": true,
                "kind": "string",
                "raw": ""Other hello world!"",
                "unicode": false,
                "value": "Other hello world!",
              },
            },
          ],
          "final": false,
          "kind": "classconstant",
          "nullable": false,
          "type": null,
          "visibility": "",
        },
      ],
      "extends": null,
      "implements": null,
      "isAbstract": false,
      "isAnonymous": false,
      "isFinal": false,
      "isReadonly": false,
      "kind": "class",
      "name": Identifier {
        "kind": "identifier",
        "name": "Foo",
      },
    },
  ],
  "errors": [],
  "kind": "program",
}
`;

exports[`classconstant private 1`] = `
Program {
  "children": [
    Class {
      "attrGroups": [],
      "body": [
        ClassConstant {
          "attrGroups": [],
          "constants": [
            Constant {
              "kind": "constant",
              "name": Identifier {
                "kind": "identifier",
                "name": "CONSTANT",
              },
              "value": String {
                "isDoubleQuote": true,
                "kind": "string",
                "raw": ""Hello world!"",
                "unicode": false,
                "value": "Hello world!",
              },
            },
          ],
          "final": false,
          "kind": "classconstant",
          "nullable": false,
          "type": null,
          "visibility": "private",
        },
      ],
      "extends": null,
      "implements": null,
      "isAbstract": false,
      "isAnonymous": false,
      "isFinal": false,
      "isReadonly": false,
      "kind": "class",
      "name": Identifier {
        "kind": "identifier",
        "name": "Foo",
      },
    },
  ],
  "errors": [],
  "kind": "program",
}
`;

exports[`classconstant protected 1`] = `
Program {
  "children": [
    Class {
      "attrGroups": [],
      "body": [
        ClassConstant {
          "attrGroups": [],
          "constants": [
            Constant {
              "kind": "constant",
              "name": Identifier {
                "kind": "identifier",
                "name": "CONSTANT",
              },
              "value": String {
                "isDoubleQuote": true,
                "kind": "string",
                "raw": ""Hello world!"",
                "unicode": false,
                "value": "Hello world!",
              },
            },
          ],
          "final": false,
          "kind": "classconstant",
          "nullable": false,
          "type": null,
          "visibility": "protected",
        },
      ],
      "extends": null,
      "implements": null,
      "isAbstract": false,
      "isAnonymous": false,
      "isFinal": false,
      "isReadonly": false,
      "kind": "class",
      "name": Identifier {
        "kind": "identifier",
        "name": "Foo",
      },
    },
  ],
  "errors": [],
  "kind": "program",
}
`;

exports[`classconstant public 1`] = `
Program {
  "children": [
    Class {
      "attrGroups": [],
      "body": [
        ClassConstant {
          "attrGroups": [],
          "constants": [
            Constant {
              "kind": "constant",
              "name": Identifier {
                "kind": "identifier",
                "name": "CONSTANT",
              },
              "value": String {
                "isDoubleQuote": true,
                "kind": "string",
                "raw": ""Hello world!"",
                "unicode": false,
                "value": "Hello world!",
              },
            },
          ],
          "final": false,
          "kind": "classconstant",
          "nullable": false,
          "type": null,
          "visibility": "public",
        },
      ],
      "extends": null,
      "implements": null,
      "isAbstract": false,
      "isAnonymous": false,
      "isFinal": false,
      "isReadonly": false,
      "kind": "class",
      "name": Identifier {
        "kind": "identifier",
        "name": "Foo",
      },
    },
  ],
  "errors": [],
  "kind": "program",
}
`;

exports[`classconstant simple 1`] = `
Program {
  "children": [
    Class {
      "attrGroups": [],
      "body": [
        ClassConstant {
          "attrGroups": [],
          "constants": [
            Constant {
              "kind": "constant",
              "name": Identifier {
                "kind": "identifier",
                "name": "CONSTANT",
              },
              "value": String {
                "isDoubleQuote": true,
                "kind": "string",
                "raw": ""Hello world!"",
                "unicode": false,
                "value": "Hello world!",
              },
            },
          ],
          "final": false,
          "kind": "classconstant",
          "nullable": false,
          "type": null,
          "visibility": "",
        },
      ],
      "extends": null,
      "implements": null,
      "isAbstract": false,
      "isAnonymous": false,
      "isFinal": false,
      "isReadonly": false,
      "kind": "class",
      "name": Identifier {
        "kind": "identifier",
        "name": "Foo",
      },
    },
  ],
  "errors": [],
  "kind": "program",
}
`;

exports[`classconstant simple using 8.3 1`] = `
Program {
  "children": [
    Class {
      "attrGroups": [],
      "body": [
        ClassConstant {
          "attrGroups": [],
          "constants": [
            Constant {
              "kind": "constant",
              "name": Identifier {
                "kind": "identifier",
                "name": "CONSTANT",
              },
              "value": String {
                "isDoubleQuote": true,
                "kind": "string",
                "raw": ""Hello world!"",
                "unicode": false,
                "value": "Hello world!",
              },
            },
          ],
          "final": false,
          "kind": "classconstant",
          "nullable": false,
          "type": null,
          "visibility": "",
        },
      ],
      "extends": null,
      "implements": null,
      "isAbstract": false,
      "isAnonymous": false,
      "isFinal": false,
      "isReadonly": false,
      "kind": "class",
      "name": Identifier {
        "kind": "identifier",
        "name": "Foo",
      },
    },
  ],
  "errors": [],
  "kind": "program",
}
`;

exports[`classconstant type hinted (supported) 1`] = `
Program {
  "children": [
    Class {
      "attrGroups": [],
      "body": [
        ClassConstant {
          "attrGroups": [],
          "constants": [
            Constant {
              "kind": "constant",
              "name": Identifier {
                "kind": "identifier",
                "name": "CONSTANT",
              },
              "value": String {
                "isDoubleQuote": true,
                "kind": "string",
                "raw": ""Hello world!"",
                "unicode": false,
                "value": "Hello world!",
              },
            },
          ],
          "final": false,
          "kind": "classconstant",
          "nullable": false,
          "type": TypeReference {
            "kind": "typereference",
            "name": "string",
            "raw": "string",
          },
          "visibility": "public",
        },
      ],
      "extends": null,
      "implements": null,
      "isAbstract": false,
      "isAnonymous": false,
      "isFinal": false,
      "isReadonly": false,
      "kind": "class",
      "name": Identifier {
        "kind": "identifier",
        "name": "Foo",
      },
    },
  ],
  "errors": [],
  "kind": "program",
}
`;

exports[`classconstant type hinted (unsupported) 1`] = `"Parse Error : syntax error, unexpected 'CONSTANT' (T_STRING), expecting '=' on line 1"`;
